<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsActivity">

    <TextView
        android:id="@+id/txtTitleStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/titleStats"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/txtSum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txtSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/txtSum"
        android:textColor="#E91E63"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtHighestCured"
        app:layout_constraintStart_toStartOf="@+id/txtHighestCured"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleStats" />

    <TextView
        android:id="@+id/txtHighestCured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/txtHighestCuredCountry"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTests"
        app:layout_constraintStart_toStartOf="@+id/txtTests"
        app:layout_constraintTop_toBottomOf="@+id/txtSum" />

    <TextView
        android:id="@+id/txtTests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTests"
        android:textColor="#FFC107"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHighestCured" />
</androidx.constraintlayout.widget.ConstraintLayout>